    standalone, by honoring SOURCE_DATE_EPOCH.
  * Portability:
    - Cast off_t variables to intmax_t when printing them with "%jd".
    - Add missing <string.h> include in libdpkg.
    - Cast strlen() return value to ssize_t to match write() return type.
    - Use underscore-prefixed system preprocessor symbols instead of namespace
      polluting ones (such as “linux”, “OPENBSD” or “hpux”).
  * Perl modules:
    - Obsolete Source-Version substvar in Dpkg::Substvars by emitting errors.
    - Rework keyring hooks in Dpkg::Vendor. Deprecate the keyrings hook, and
      add package-keyrings, archive-keyrings and archive-keyrings-historic
      hooks. Prompted by Johannes Schauer <josch@debian.org>.
    - Make the Dpkg::Substavars parse() method return the number of substvars
      parsed.
    - Add new set_field_substvars() method to Dpkg::Substvars.
    - Fix reproducible source package support in Dpkg::Source::Archive, by
      sorting the tar contents with --sort=name.
  * Packaging:
    - Add liblocale-gettext-perl to libdpkg-perl Recommends.
    - Wrap and document dependency relationships.
    - Remove obsolete dependency relationships, since Debian oldstable.
    - Remove update-alternatives, dpkg-divert and dpkg-statoverride
      compatibility symlinks, again.
    - Use perl:Depends via dh_perl instead of a hardcoded perl in Depends.
    - Remove unused dh_strip from binary_indep target.
    - Remove ancient upgrade code from maintainer scripts (before 1.15.x).
    - Stop compressing the dpkg.deb package with gzip.
  * Documentation:
    - Update custom changelog parser API support status in README.api.
    - Fix typos in docs and man pages. Thanks to Jakub Wilk <jwilk@debian.org>
      Closes: #834584
    - Fix formatting in SOURCE_DATE_EPOCH description in dpkg-deb(5).
    - Improve dpkg-deb --build arguments documentation in dpkg-deb(1).
      Prompted by Johannes Schauer <josch@debian.org>.